--- a/web/templates/event/event_confirm_delete.html
+++ b/web/templates/event/event_confirm_delete.html
@@ -15,7 +15,7 @@ Events List
     <a href="{% url 'event_list' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
-{% endblock main_content
+{% endblock main_content %}
 {% block page_JS %}
 
 {% endblock page_JS %}
