--- a/web/templates/user/all_users.html
+++ b/web/templates/user/all_users.html
@@ -1,5 +1,3 @@
-
-
 {% extends "base.html" %}
 {% load static %}
 {% block page_CSS %}
@@ -15,7 +13,7 @@ All Users
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">All Users</h5>
-                <table id="pending_users_list" class="table table-striped" style="width:100%">
+                <table id="all_users_list" class="table table-striped" style="width:100%">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -23,18 +21,26 @@ All Users
                             <th>Full Name</th>
                             <th>Last Login </th>
                              <th>User Type</th>
+                             <th>Confirmed</th>
                             <th>Phone</th>
                             <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for user in pending_users %}
+                        {% for user in all_users %}
                         <tr>
                             <td><a href="#"> {{ user.pk }} </a></td>
                             <td>{{user.email}}</td>
                             <td>{{user.first_name|truncatechars:10}} - {{user.last_name|truncatechars:10}}</td>
                             <td>{{ user.last_login }}</td>
                             <td>{{ user.user_type }}</td>
+                            <td>
+                                {% if user.is_account_confirmed %}
+                                    <span class="badge badge-center bg-label-success"><i class='bx bxs-user-check' ></i></span>
+                                    
+                                {% else %}
+                                    <span class="badge badge-center bg-label-danger"><i class='bx bxs-user-x' ></i></span>
+                                {% endif %}
                             <td>{{ user.phone }}</td>
                             {% if request.user.user_type == 'manager' %}
                             <td>
@@ -54,7 +60,7 @@ All Users
                         </tr>
                         {% empty %}
                         <tr>
-                            <td colspan="6">No Pending Users available.</td>
+                            <td colspan="6">No events available.</td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -64,7 +70,8 @@ All Users
                             <th>Email</th>
                             <th>Full Name</th>
                             <th>Last Login </th>
-                             <th>User Type</th>
+                            <th>User Type</th>
+                            <th>Confirmed</th>
                             <th>Phone</th>
                             <th>Action</th>
                         </tr>
@@ -81,7 +88,7 @@ All Users
 <script src="https://cdn.datatables.net/2.2.2/js/dataTables.bootstrap5.js"></script>
 <script>
     $(document).ready(function() {
-        new DataTable('#pending_users_list');
+        new DataTable('#all_users_list');
     });
 </script>
 {% endblock page_JS %}
